# datagouv-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: datagouv-cli.rb  datagouv.rb
chocolatey/datagouv/: datagouv.nuspec
chocolatey/datagouv-cli/: datagouv-cli.nuspec
chocolatey/datagouv-cli/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
chocolatey/datagouv/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
datagouv_cli/: __init__.py  __main__.py  cli.py  config.py
datagouv_cli/commands/: dataset.py  organization.py  resource.py  topic.py  utils.py
homebrew-tap/: README.md
homebrew-tap/Formula/: datagouv-cli.rb  datagouv.rb
packaging/apt/: distributions  publish-repo.sh
packaging/brew/: datagouv.rb.j2  generate-formula.sh  update-tap.sh
packaging/chocolatey/: generate-nuspec.sh  update-package.sh
packaging/deb/: build-deb.sh  control.template
packaging/pyinstaller/: datagouv.spec
scripts/: install.sh  package-binary.ps1  package-binary.sh  smoke-test-binary.ps1  smoke-test-binary.sh
tests/: test_config.py  test_entrypoint.py
